@@ -1,3 +1,0 @@
-#include "magic.h"
-
-// TODO uhuru libmagic implementation.
